ispCP ω 1.0.5 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2010-03-22 Laurent Declercq
	- GUI
		* Improvement: Removed an useless SQL statement in reseller/user_add4.php
		* Fixed: Wrong Internationalization method in reseller/user_add4.php
	- TOOLS:
		* Fixed: Wrong regexp in filemanager/include/html.inc.php

2010-03-21 Laurent Declercq
	- GUI
		* Fixed #2195: Users gui properties not deleted
		* Fixed #2266: Logical error in gui/client/alias_add.php

2010-03-20 Laurent Declercq
	- DATABASE:
		* Updated database revision

2010-03-20 Benedikt Heintel
	- CONFIGS:
		* Removed wc Command
	- DISTS:
		* Fixed #2246: FreeBSD improvements
		* Fixed #2285: [FreeBSD] Add needed packages to freebsd-packages
		* Fixed #2286: [FreeBSD] Correct ispcp.conf -> Local Alias
	- LANGUAGE:
		* Fixed #2278: dutch translation for 1.05
	- TOOLS:
		* Fixed possible vulnerability. See: 
			http://packetstormsecurity.org/1003-exploits/ispcp-rfi.txt

2010-03-19 Laurent Declercq
	- ENGINE:
		* Fixed #2265: Protected area's files are regenerated in wrong place
			during update
		* Re-factoring and some others changes in the ispcp-htaccess-mngr manager:
			- Added code documentation
			- Changed `dump_el()` to `pop_el()` in main section to avoid log
				repetition on error
			- Changed prefixes of all subroutines names according the script
				name
			- Merged 'htuser_del_user_system_data()' with
				'htuser_del_group_system_data()'
			- Removed useless variables
			- Removed useless call of `get_conf()` (already performed in common
				file)
			- Removed useless conditions in SQL statements
			- Removed useless `wc` command to improve performances
			- Removed useless sleep statement
			- Rewritten the `htuser_mngr_engine()` subroutine to avoid code
				repetition
	- GUI:
		* Fixed #2265: Protected area's files are regenerated in wrong place
			during update:
			- Added an database update to clean all `.htaccess` destdir paths
			- Added code to cleanup  the submitted `.htaccess` destdir path