@@ -34,7 +34,7 @@ function get_domain_default_props(&$sql, $domain_admin_id, $returnWKeys = false)
 	// Please, when you adds new field here, you must
 	// report it in all scripts that calls this function.
 
-	$query = <<<SQL_QUERY
+	$query = "
 		SELECT
 			`domain_id`,
 			`domain_name`,
@@ -63,7 +63,8 @@ function get_domain_default_props(&$sql, $domain_admin_id, $returnWKeys = false)
 			`domain`
 		WHERE
 			`domain_admin_id` = ?
-SQL_QUERY;
+		;
+	";
 
 	$rs = exec_query($sql, $query, array($domain_admin_id));
 
@@ -99,27 +100,30 @@ SQL_QUERY;
 }
 
 function get_domain_running_sub_cnt(&$sql, $domain_id) {
-	$query = <<<SQL_QUERY
+
+	$query = "
 		SELECT
 			COUNT(*) AS cnt
 		FROM
 			`subdomain`
 		WHERE
 			`domain_id` = ?
-SQL_QUERY;
+		;
+	";
 
 	$rs = exec_query($sql, $query, array($domain_id));
 
 	$sub_count = $rs->fields['cnt'];
 
-$query = <<<SQL_QUERY
+	$query = "
 		SELECT
 			COUNT(`subdomain_alias_id`) AS cnt
 		FROM
 			`subdomain_alias`
 		WHERE
 			`alias_id` IN (SELECT `alias_id` FROM `domain_aliasses` WHERE `domain_id` = ?)
-SQL_QUERY;
+		;
+	";
 
 	$rs = exec_query($sql, $query, array($domain_id));
 
@@ -129,14 +133,16 @@ SQL_QUERY;
 }
 
 function get_domain_running_als_cnt(&$sql, $domain_id) {
-	$query = <<<SQL_QUERY
+
+	$query = "
 		SELECT
 			COUNT(*) AS cnt
 		FROM
 			`domain_aliasses`
 		WHERE
 			`domain_id` = ?
-SQL_QUERY;
+		;
+	";
 
 	$rs = exec_query($sql, $query, array($domain_id));
 
@@ -146,29 +152,62 @@ SQL_QUERY;
 }
 
 function get_domain_running_mail_acc_cnt(&$sql, $domain_id) {
-	$qr_dmn = "SELECT COUNT(`mail_id`) AS cnt
-		FROM `mail_users`
-		WHERE `mail_type` RLIKE 'normal_'
-		AND `mail_type` NOT LIKE 'normal_catchall'
-		AND `domain_id` = ?";
 
-	$qr_als = "SELECT COUNT(`mail_id`) AS cnt
-		FROM `mail_users`
-		WHERE `mail_type` RLIKE 'alias_'
-		AND `mail_type` NOT LIKE 'alias_catchall'
-		AND `domain_id` = ?";
+	$qr_dmn = "
+		SELECT
+			COUNT(`mail_id`) AS cnt
+		FROM
+			`mail_users`
+		WHERE
+			`mail_type` RLIKE 'normal_'
+		AND
+			`mail_type` NOT LIKE 'normal_catchall'
+		AND
+			`domain_id` = ?
+		;
+	";
 
-	$qr_sub = "SELECT COUNT(`mail_id`) AS cnt
-		FROM `mail_users`
-		WHERE `mail_type` RLIKE 'subdom_'
-		AND `mail_type` NOT LIKE 'subdom_catchall'
-		AND `domain_id` = ?";
+	$qr_als = "
+		SELECT
+			COUNT(`mail_id`) AS cnt
+		FROM
+			`mail_users`
+		WHERE
+			`mail_type` RLIKE 'alias_'
+		AND
+			`mail_type` NOT LIKE 'alias_catchall'
+		AND
+			`domain_id` = ?
+		;
+	";
 
-	$qr_alssub = "SELECT COUNT(`mail_id`) AS cnt
-		FROM `mail_users`
-		WHERE `mail_type` RLIKE 'alssub_'
-		AND `mail_type` NOT LIKE 'alssub_catchall'
-		AND `domain_id` = ?";
+	$qr_sub = "
+		SELECT
+			COUNT(`mail_id`) AS cnt
+		FROM
+			`mail_users`
+		WHERE
+			`mail_type` RLIKE 'subdom_'
+		AND
+			`mail_type` NOT LIKE 'subdom_catchall'
+		AND
+			`domain_id` = ?
+		;
+	";
+
+	$qr_alssub = "
+		SELECT
+			COUNT(`mail_id`) AS cnt
+		FROM
+			`mail_users`
+		WHERE
+			`mail_type` RLIKE 'alssub_'
+		AND
+			`mail_type` NOT LIKE 'alssub_catchall'
+		AND
+			`domain_id` = ?
+		;
+	";
 
 	if (Config::get('COUNT_DEFAULT_EMAIL_ADDRESSES') == 0) {
 		$qr_dmn .= " AND `mail_acc` != 'abuse'
@@ -187,6 +226,7 @@ function get_domain_running_mail_acc_cnt(&$sql, $domain_id) {
 			AND `mail_acc` != 'postmaster'
 			AND `mail_acc` != 'webmaster'";
 	}
+
 	$rs = exec_query($sql, $qr_dmn, array($domain_id));
 	$dmn_mail_acc = $rs->fields['cnt'];
 
@@ -209,29 +249,32 @@ function get_domain_running_mail_acc_cnt(&$sql, $domain_id) {
 }
 
 function get_domain_running_dmn_ftp_acc_cnt(&$sql, $domain_id) {
+
 	$ftp_separator = Config::get('FTP_USERNAME_SEPARATOR');
 
-	$query = <<<SQL_QUERY
+	$query = "
 		SELECT
 			`domain_name`
 		FROM
 			`domain`
 		WHERE
 			`domain_id` = ?
-SQL_QUERY;
+		;
+	";
 
 	$rs = exec_query($sql, $query, array($domain_id));
 
 	$dmn_name = $rs->fields['domain_name'];
 
-	$query = <<<SQL_QUERY
+	$query = "
 		SELECT
 			COUNT(*) AS cnt
 		FROM
 			`ftp_users`
 		WHERE
 			`userid` LIKE ?
-SQL_QUERY;
+		;
+	";
 
 	$rs = exec_query($sql, $query, array('%' . $ftp_separator . $dmn_name));
 
@@ -240,8 +283,10 @@ SQL_QUERY;
 }
 
 function get_domain_running_sub_ftp_acc_cnt(&$sql, $domain_id) {
+
 	$ftp_separator = Config::get('FTP_USERNAME_SEPARATOR');
-	$query = <<<SQL_QUERY
+
+	$query = "
 		SELECT
 			`subdomain_name`
 		FROM
@@ -250,16 +295,18 @@ function get_domain_running_sub_ftp_acc_cnt(&$sql, $domain_id) {
 			`domain_id` = ?
 		ORDER BY
 			`subdomain_id`
-SQL_QUERY;
+		;
+	";
 
-	$query2 = <<<SQL_QUERY
+	$query2 = "
 		SELECT
 			`domain_name`
 		FROM
 			`domain`
 		WHERE
 			`domain_id` = ?
-SQL_QUERY;
+		;
+	";
 
 	$dmn = exec_query($sql, $query2, array($domain_id));
 	$rs = exec_query($sql, $query, array($domain_id));
@@ -269,14 +316,15 @@ SQL_QUERY;
 	while (!$rs->EOF) {
 		$sub_name = $rs->fields['subdomain_name'];
 
-		$query = <<<SQL_QUERY
+		$query = "
 			SELECT
 				COUNT(*) AS cnt
 			FROM
 				`ftp_users`
 			WHERE
 				`userid` LIKE ?
-SQL_QUERY;
+			;
+		";
 
 		$rs_cnt = exec_query($sql, $query, array('%' . $ftp_separator . $sub_name . '.' . $dmn->fields['domain_name']));
 
@@ -289,8 +337,10 @@ SQL_QUERY;
 }
 
 function get_domain_running_als_ftp_acc_cnt(&$sql, $domain_id) {
+
 	$ftp_separator = Config::get('FTP_USERNAME_SEPARATOR');
-	$query = <<<SQL_QUERY
+
+	$query = "
 		SELECT
 			`alias_name`
 		FROM
@@ -299,7 +349,8 @@ function get_domain_running_als_ftp_acc_cnt(&$sql, $domain_id) {
 			`domain_id` = ?
 		ORDER BY
 			`alias_id`
-SQL_QUERY;
+		;
+	";
 
 	$rs = exec_query($sql, $query, array($domain_id));
 
@@ -308,14 +359,15 @@ SQL_QUERY;
 	while (!$rs->EOF) {
 		$als_name = $rs->fields['alias_name'];
 
-		$query = <<<SQL_QUERY
+		$query = "
 			SELECT
 				COUNT(*) AS cnt
 			FROM
 				`ftp_users`
 			WHERE
 				`userid` LIKE ?
-SQL_QUERY;
+			;
+		";
 
 		$rs_cnt = exec_query($sql, $query, array('%' . $ftp_separator . $als_name));
 
@@ -342,14 +394,16 @@ function get_domain_running_ftp_acc_cnt(&$sql, $domain_id) {
 }
 
 function get_domain_running_sqld_acc_cnt(&$sql, $domain_id) {
-	$query = <<<SQL_QUERY
+
+	$query = "
 		SELECT
 			COUNT(*) AS cnt
 		FROM
 			`sql_database`
 		WHERE
 			`domain_id` = ?
-SQL_QUERY;
+		;
+	";
 
 	$rs = exec_query($sql, $query, array($domain_id));
 
@@ -359,7 +413,8 @@ SQL_QUERY;
 }
 
 function get_domain_running_sqlu_acc_cnt(&$sql, $domain_id) {
-	$query = <<<SQL_QUERY
+
+	$query = "
 		SELECT DISTINCT
 			t1.`sqlu_name`
 		FROM
@@ -368,7 +423,8 @@ function get_domain_running_sqlu_acc_cnt(&$sql, $domain_id) {
 			t2.`domain_id` = ?
 		AND
 			t2.`sqld_id` = t1.`sqld_id`
-SQL_QUERY;
+		;
+	";
 
 	$rs = exec_query($sql, $query, array($domain_id));
 
@@ -398,6 +454,7 @@ function get_domain_running_props_cnt(&$sql, $domain_id) {
 }
 
 function gen_client_mainmenu(&$tpl, $menu_file) {
+
 	$sql = Database::getInstance();
 
 	$tpl->define_dynamic('menu', $menu_file);
@@ -454,7 +511,7 @@ function gen_client_mainmenu(&$tpl, $menu_file) {
 		)
 	);
 
-	$query = <<<SQL_QUERY
+	$query = "
 		SELECT
 			*
 		FROM
@@ -463,9 +520,11 @@ function gen_client_mainmenu(&$tpl, $menu_file) {
 			`menu_level` = 'user'
 		OR
 			`menu_level` = 'all'
-SQL_QUERY;
+		;
+	";
 
 	$rs = exec_query($sql, $query, array());
+
 	if ($rs->RecordCount() == 0) {
 		$tpl->assign('CUSTOM_BUTTONS', '');
 	} else {
@@ -536,12 +595,13 @@ SQL_QUERY;
 		$tpl->assign('ISACTIVE_SQL', '');
 
 	$query = "
-	SELECT
-		`support_system`
-	FROM
-		`reseller_props`
-	WHERE
-		`reseller_id` = ?
+		SELECT
+			`support_system`
+		FROM
+			`reseller_props`
+		WHERE
+			`reseller_id` = ?
+		;
 	";
 
 	$rs = exec_query($sql, $query, array($_SESSION['user_created_by']));
@@ -565,6 +625,7 @@ SQL_QUERY;
 }
 
 function gen_client_menu(&$tpl, $menu_file) {
+
 	$sql = Database::getInstance();
 
 	$tpl->define_dynamic('menu', $menu_file);
@@ -629,9 +690,11 @@ function gen_client_menu(&$tpl, $menu_file) {
 			`menu_level` = 'user'
 		OR
 			`menu_level` = 'all'
+		;
 	";
 
 	$rs = exec_query($sql, $query, array());
+
 	if ($rs->RecordCount() == 0) {
 		$tpl->assign('CUSTOM_BUTTONS', '');
 	} else {
@@ -661,13 +724,15 @@ function gen_client_menu(&$tpl, $menu_file) {
 			$i++;
 		} // end while
 	} // end else
+
 	$query = "
-	SELECT
-		`support_system`
-	FROM
-		`reseller_props`
-	WHERE
-		`reseller_id` = ?
+		SELECT
+			`support_system`
+		FROM
+			`reseller_props`
+		WHERE
+			`reseller_id` = ?
+		;
 	";
 
 	$rs = exec_query($sql, $query, array($_SESSION['user_created_by']));
@@ -719,7 +784,7 @@ function gen_client_menu(&$tpl, $menu_file) {
 	}
 
 	// Hide 'Update Hosting Package'-Button, if there are none
-	$query = <<<SQL_QUERY
+	$query = "
 		SELECT
 			`id`
 		FROM
@@ -728,9 +793,11 @@ function gen_client_menu(&$tpl, $menu_file) {
 			`reseller_id` = ?
 		AND
 			`status` = '1'
-SQL_QUERY;
+		;
+	";
 
 	$rs = exec_query($sql, $query, array($_SESSION['user_created_by']));
+
 	if ($rs->RecordCount() == 0) {
 		if (Config::get('HOSTING_PLANS_LEVEL') != 'admin') {
 			$tpl->assign('ISACTIVE_UPDATE_HP', '');
@@ -741,14 +808,16 @@ SQL_QUERY;
 }
 
 function get_user_domain_id(&$sql, $user_id) {
-	$query = <<<SQL_QUERY
+
+	$query = "
 		SELECT
 			`domain_id`
 		FROM
 			`domain`
 		WHERE
 			`domain_admin_id` = ?
-SQL_QUERY;
+		;
+	";
 
 	$rs = exec_query($sql, $query, array($user_id));
 
@@ -756,6 +825,7 @@ SQL_QUERY;
 }
 
 function user_trans_mail_type($mail_type) {
+
 	if ($mail_type === MT_NORMAL_MAIL) {
 		return tr('Domain mail');
 	} else if ($mail_type === MT_NORMAL_FORWARD) {
@@ -787,19 +857,22 @@ function user_trans_mail_type($mail_type) {
  * @param string $dest destination for header location (path + filename + params)
  */
 function user_goto($dest) {
+
 	header('Location: ' . $dest);
 	die();
 }
 
 function count_sql_user_by_name(&$sql, $sqlu_name) {
-	$query = <<<SQL_QUERY
+
+	$query = "
 		SELECT
 			COUNT(*) AS cnt
 		FROM
 			`sql_user`
 		WHERE
 			`sqlu_name` = ?
-SQL_QUERY;
+		;
+	";
 
 	$rs = exec_query($sql, $query, array($sqlu_name));
 
@@ -810,8 +883,9 @@ SQL_QUERY;
  * @todo see dirty hack
  */
 function sql_delete_user(&$sql, $dmn_id, $db_user_id) {
+
 	// let's get sql user common data;
-	$query = <<<SQL_QUERY
+	$query = "
 		SELECT
 			t1.`sqld_id`, t1.`sqlu_name`, t2.`sqld_name`, t1.`sqlu_name`
 		FROM
@@ -823,7 +897,8 @@ function sql_delete_user(&$sql, $dmn_id, $db_user_id) {
 			t2.`domain_id` = ?
 		AND
 			t1.`sqlu_id` = ?
-SQL_QUERY;
+		;
+	";
 
 	$rs = exec_query($sql, $query, array($dmn_id, $db_user_id));
 
@@ -835,9 +910,10 @@ SQL_QUERY;
 		}
 		user_goto('sql_manage.php');
 	}
+
 	// remove from ispcp sql_user table.
 	$query = 'DELETE FROM `sql_user` WHERE `sqlu_id` = ?';
-	exec_query($sql, $query, array($db_user_id));
+	exec_query($sql, $query, $db_user_id);
 
 	update_reseller_c_props(get_reseller_id($dmn_id));
 
@@ -846,44 +922,29 @@ SQL_QUERY;
 
 	if (count_sql_user_by_name($sql, $rs->fields['sqlu_name']) == 0) {
 		$db_id = $rs->fields['sqld_id'];
+
 		// revoke grants on global level, if any;
-		$query = <<<SQL_QUERY
-			REVOKE ALL ON *.* FROM ?@'%'
-SQL_QUERY;
+		$query = "REVOKE ALL ON *.* FROM ?@'%';";
 		$rs = exec_query($sql, $query, array($db_user_name));
 
-		$query = <<<SQL_QUERY
-			REVOKE ALL ON *.* FROM ?@localhost
-SQL_QUERY;
+		$query = "REVOKE ALL ON *.* FROM ?@localhost;";
 		$rs = exec_query($sql, $query, array($db_user_name));
 
 		// delete user record from mysql.user table;
-		$query = <<<SQL_QUERY
-			DROP USER ?@'%';
-SQL_QUERY;
+		$query = "DROP USER ?@'%';";
 		$rs = exec_query($sql, $query, array($db_user_name));
 
-		$query = <<<SQL_QUERY
-			DROP USER ?@'localhost';
-SQL_QUERY;
-
+		$query = "DROP USER ?@'localhost';";
 		$rs = exec_query($sql, $query, array($db_user_name));
 
 		// flush privileges.
-		$query = <<<SQL_QUERY
-			FLUSH PRIVILEGES;
-SQL_QUERY;
+		$query = "FLUSH PRIVILEGES;";
 		$rs = exec_query($sql, $query, array());
 	} else {
-		$query = <<<SQL_QUERY
-			REVOKE ALL ON $db_name.* FROM ?@'%'
-SQL_QUERY;
-
+		$query = "REVOKE ALL ON $db_name.* FROM ?@'%';";
 		$rs = exec_query($sql, $query, array($db_user_name));
 
-		$query = <<<SQL_QUERY
-			REVOKE ALL ON $db_name.* FROM ?@localhost
-SQL_QUERY;
+		$query = "REVOKE ALL ON $db_name.* FROM ?@localhost;";
 		$rs = exec_query($sql, $query, array($db_user_name));
 	}
 }
@@ -914,6 +975,7 @@ function check_permissions(&$tpl) {
 }
 
 function check_usr_sql_perms(&$sql, $db_user_id) {
+
 	if (who_owns_this($db_user_id, 'sqlu_id') != $_SESSION['user_id']) {
 		set_page_message(tr('User does not exist or you do not have permission to access this interface!'));
 
@@ -922,6 +984,7 @@ function check_usr_sql_perms(&$sql, $db_user_id) {
 }
 
 function check_db_sql_perms(&$sql, $db_id) {
+
 	if (who_owns_this($db_id, 'sqld_id') != $_SESSION['user_id']) {
 		set_page_message(tr('User does not exist or you do not have permission to access this interface!'));
 
@@ -930,6 +993,7 @@ function check_db_sql_perms(&$sql, $db_id) {
 }
 
 function check_ftp_perms($sql, $ftp_acc) {
+
 	if (who_owns_this($ftp_acc, 'ftp_user') != $_SESSION['user_id']) {
 		set_page_message(tr('User does not exist or you do not have permission to access this interface!'));
 
@@ -938,7 +1002,8 @@ function check_ftp_perms($sql, $ftp_acc) {
 }
 
 function delete_sql_database(&$sql, $dmn_id, $db_id) {
-	$query = <<<SQL_QUERY
+
+	$query = "
 		SELECT
 			`sqld_name` AS db_name
 		FROM
@@ -947,7 +1012,8 @@ function delete_sql_database(&$sql, $dmn_id, $db_id) {
 			`domain_id` = ?
 		AND
 			`sqld_id` = ?
-SQL_QUERY;
+		;
+	";
 
 	$rs = exec_query($sql, $query, array($dmn_id, $db_id));
 
@@ -960,8 +1026,9 @@ SQL_QUERY;
 	}
 
 	$db_name = quoteIdentifier($rs->fields['db_name']);
+
 	// have we any users assigned to this database;
-	$query = <<<SQL_QUERY
+	$query = "
 		SELECT
 			t2.`sqlu_id` AS db_user_id,
 			t2.`sqlu_name` AS db_user_name
@@ -974,7 +1041,8 @@ SQL_QUERY;
 			t1.`domain_id` = ?
 		AND
 			t1.`sqld_id` = ?
-SQL_QUERY;
+		;
+	";
 
 	$rs = exec_query($sql, $query, array($dmn_id, $db_id));
 
@@ -989,21 +1057,23 @@ SQL_QUERY;
 			$rs->MoveNext();
 		}
 	}
+
 	// drop desired database;
 	$query = "DROP DATABASE IF EXISTS $db_name;";
-
 	exec_query($sql, $query);
 
 	write_log($_SESSION['user_logged'] . ": delete SQL database: " . $db_name);
 	// delete desired database from the ispcp sql_database table;
-	$query = <<<SQL_QUERY
+
+	$query = "
 		DELETE FROM
 			`sql_database`
 		WHERE
 			`domain_id` = ?
 		AND
 			`sqld_id` = ?
-SQL_QUERY;
+		;
+	";
 
 	exec_query($sql, $query, array($dmn_id, $db_id));
 
@@ -1011,6 +1081,7 @@ SQL_QUERY;
 }
 
 function get_gender_by_code($code, $nullOnBad = false) {
+
 	switch (strtolower($code)) {
 		case 'm':
 		case 'M':
@@ -1024,7 +1095,9 @@ function get_gender_by_code($code, $nullOnBad = false) {
 }
 
 function mount_point_exists($dmn_id, $mnt_point) {
+
 	$sql = Database::getInstance();
+
 	$query = "
 		SELECT
 			t1.`domain_id`, t2.`alias_mount`, t3.`subdomain_mount`, t4.`subdomain_alias_mount`
@@ -1053,7 +1126,9 @@ function mount_point_exists($dmn_id, $mnt_point) {
 				`subdomain_alias_mount` = ?
 			)
 	";
+
 	$rs = exec_query($sql, $query, array($dmn_id, $mnt_point, $mnt_point, $mnt_point));
+
 	if ($rs->RowCount() > 0) {
 		return true;
 	}
@@ -1067,6 +1142,7 @@ function mount_point_exists($dmn_id, $mnt_point) {
  * @return boolean Client Domain Alias Permissions
  */
 function check_client_domainalias_permissions($user_id) {
+
 	$sql = Database::getInstance();
 
 	list($dmn_id,
